--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Back Api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./index.js"
+    "dev": "nodemon index.js",
+    "start": "node ./index.js"
   },
   "author": "Estrela José",
   "license": "ISC",
